2005-04-14  Michael Gogins <gogins@pipeline.com>
	* Changed CsoundVST to print log messages to stderr (used to be
	stdout) by default.
	* Added option to CsoundVST to automatically open the output
	soundfile for editing or listening at end of performance.
	* Upgraded Windows installer to set OPCODEDIR, RAWWAVE_PATH,
	PYTHONPATH, and PATH environment variables 
	(uninstall does not work for PYTHONPATH).
	
2005-04-12  John ffitch  <jpff@codemist.co.uk>

	* Opcodes/wave-terrain.c (wtPerf): Improved phase accumulation problem

2005-04-10  Michael Gogins <gogins@pipeline.com>
	* Updated the STK opcodes to take from 0 to 4 optional
	krate controller-value pairs.
	
2005-04-10  John ff  <jpff@codemist.co.uk>

	* OOps/ugens2.c (itabl3): Missing return

2005-04-09  Michael Gogins <gogins@pipeline.com>
	* Added "STKName" (e.g. "STKBowed") opcodes for all Perry Cook's 
	Synthesis Toolkit in C++ (STK) 4.2.0 instruments in
	his "demo" program, using Cook's original C++ code
	with minimal wrapping (about 25 opcodes, varying in quality
	from mediocre to very good). To build the opcodes,
	copy the STK sources into the csound5/Opcodes/stk 
	directory, as instructed in SConstruct. All opcodes
	have the same signature: 
	asignal STKName ifrequency iloudness {kcontroller kvalue}
	The RAWWAVE_PATH environment variable must be set to
	point to the directory containing the "rawwaves" samples.

2005-04-09  John ffitch  <jpff@codemist.co.uk>

	* InOut/libsnd.c (sndinset): 
	* H/soundio.h: 
	* InOut/libsnd_u.c (sndgetset): Fix skipinit for soundin

2005-04-06	Istvan Varga	<istvan@csounds.com>
	* Engine/fgens.c:
	  use csound->Message() instead of printf()
	  added ENVIRON* pointer and variable arg list to fterror()
	  replaced use of deprecated FFT functions with csound->RealFFT()
	  limited line length to 80 characters
	* Engine/oload.c:
	* H/cs.h:
	* H/csoundCore.h:
	  removed deprecated functions from ENVIRON:
	    err_printf, IsPowerOfTwo, FFT2torlpacked, FFT2realpacked, cxmult,